Fix swiper navigation icons styling and visibility of last slide in HomeCatSlider

--- a/src/componets/Header/style.css
+++ b/src/componets/Header/style.css
@@ -1,4 +1,4 @@
-.link-style {
+s.link-style {
   color: black;
   text-decoration: none;
 }
